<resources>
    <string name="app_name">Perception</string>
    <string name="action_settings">Settings</string>
    <string name="connected">Connected</string>
    <string name="connect">Connect</string>
    <string name="search">Search</string>
    <string name="device_name">Device Name</string>
    <string name="unknown_name">Unknown Name</string>
    <string name="n_a">N/A</string>
    <string name="device_address">Device Address</string>
    <string name="flashlight">Flashlight</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="start">Start</string>
    <string name="connection_status">Connection Status</string>
    <string name="connecting">Connecting...</string>
    <string name="loading">Loading...</string>
</resources>
