<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nextrev.perception.activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <GridLayout
        android:id="@+id/connect_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >
        <LinearLayout
            android:id="@+id/connect_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            >
            <ImageView
                android:id="@+id/connect_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_status_disconnected"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

        </LinearLayout>
        <Button
            android:id="@+id/connect_button"
            android:text="@string/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            />
    </GridLayout>

    <GridLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textColor="@color/black"
            android:typeface="sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:minWidth="150dp"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textColor="@color/black"
            android:typeface="sans"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
    </GridLayout>


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textColor="@color/black"
            android:typeface="sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:minWidth="150dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textColor="@color/black"
            android:typeface="sans"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
    </GridLayout>


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/flashlight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/flashlight_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            >
            <ImageView
                android:id="@+id/flashlight_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_status_disconnected"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flashlight"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

        </LinearLayout>
        <Button
            android:id="@+id/flashlight_button"
            android:text="@string/turn_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            />
    </GridLayout>

    <Button
        android:id="@+id/camera_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        />


</LinearLayout>
